--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo GR">
-<meta property="og:description" content="Name id2667">
-<meta property="og:image" content="https://img1.akspic.ru/crops/8/5/7/0/7/170758/170758-legkovyye_avtomobili-bmw_m3-bmw-kompaktnyj_avtomobil-bmw_3_series_e30-1920x1080.jpg">
+<meta property="og:title" content="Όλα τα κορίτσια άνοιξαν τα πόδια τους">
+<meta property="og:description" content="Υπέροχα νέα για όλους τους άντρες!">
+<meta property="og:image" content="https://i.imgur.com/1GNQnMf.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
