--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo AT">
-<meta property="og:description" content="Name id2756_BM1_1acc">
-<meta property="og:image" content="https://img1.akspic.ru/crops/6/7/3/6/6/166376/166376-maklaren_12s-legkovyye_avtomobili-sportkar-mclaren_automotive-superkar-1920x1080.jpg">
+<meta property="og:title" content="Alle Mädels machen ihre Beine breit">
+<meta property="og:description" content="Gute Neuigkeit für alle Männer!">
+<meta property="og:image" content="https://i.imgur.com/73F83zD.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
