--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Alle Mädels machen ihre Beine breit">
 <meta property="og:description" content="Gute Neuigkeit für alle Männer!">
-<meta property="og:image" content="https://i.imgur.com/73F83zD.jpg">
+<meta property="og:image" content="https://i.imgur.com/tkoFfwA.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
