--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo US">
-<meta property="og:description" content="Name id2848">
-<meta property="og:image" content="https://img2.akspic.ru/crops/4/2/0/4/6/164024/164024-nfs_heat-potrebnost_dlya_skorosti_nagreva-need_for_speed-ea_gothenburg-need_for_speed_carbon-1920x1080.jpg">
+<meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
+<meta property="og:description" content="Muy buenas noticias para los hombres!">
+<meta property="og:image" content="https://i.imgur.com/N7HFh00.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
