--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo BE">
-<meta property="og:description" content="Name id11VN">
-<meta property="og:image" content="https://img1.akspic.ru/crops/9/8/1/8/5/158189/158189-mazerati_mc12-mazerati_levante-legkovyye_avtomobili-mazerati-tyuning_avtomobilej-1920x1080.jpg">
+<meta property="og:title" content="Toutes les filles écartent les jambes">
+<meta property="og:description" content="Une bonne nouvelle pour tous les hommes !">
+<meta property="og:image" content="https://i.imgur.com/CDksiNz.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
